# stock-gone-wrong

./: .gitignore  README.md  main.ipynb  main.py  package.bat  pyproject.toml
notebooks/: analyze_stock_event.ipynb  create_index_data.ipynb  search_similar_stocks.ipynb
src/stock_gone_wrong/: agent.py  signal.py
src/stock_gone_wrong/event/: agent.py  search_news.py
src/stock_gone_wrong/simularity/: indexing.py  preprocess.py  ticker.py  visual.py
src/stock_gone_wrong/view/: main_view.py  news_view.py  pattern_view.py
