[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_gone_wrong"]

[project]
name = "stock-gone-wrong"
description = "Analyzing the triggers behind market meltdowns"
readme = "README.md"
version = "0.1.0"
authors = [{ name = "Cheung Ka Fai", email = "cyrus.cheungkf@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "statsmodels",
    "yfinance",
    "langchain",
    "langchain_community",
    "langchain_ollama",
    "jupyter",
    "googlesearch-python",
    "tqdm",
    "rank_bm25",
    "faiss-cpu",
    "dearpygui",
]
